--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
  	
         
         <activity
-            android:name=".ui.main.splash.SplashActivity"
+            android:name="com.tlgbltcn.app.weather.ui.splash.SplashActivity"
             android:label="@string/app_name"
             android:launchMode="standard"
             android:screenOrientation="portrait"
@@ -31,19 +31,21 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.main.setting.SettingActivity"
+        <activity
+            android:name="com.tlgbltcn.app.weather.ui.setting.SettingActivity"
             android:theme="@style/PreferenceScreen"
             >
 
         </activity>
-        <activity android:name=".ui.main.MainActivity"
+        <activity
+            android:name="com.tlgbltcn.app.weather.ui.main.MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden|adjustNothing">
 
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.main.MainActivity" />
+                android:value="com.tlgbltcn.app.weather.ui.main.MainActivity" />
 
         </activity>
 
