--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,8 @@ dependencies {
     implementation "com.google.android.material:material:$support_version"
     implementation "androidx.recyclerview:recyclerview:$support_version"
     implementation "androidx.cardview:cardview:$support_version"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
 
     //timber
     implementation rootProject.ext.timber
