--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.21'
+    ext.kotlin_version = '1.3.41'
     repositories {
         google()
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.1'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -51,7 +51,7 @@ ext{
     lifecycle_version = "1.1.1"
     room_version = "1.1.1"
     paging_version = "1.0.0"
-    coroutines_version = "0.22.5"
+    coroutines_version = "1.3+"
     anko_version = "0.10.4"
 
     //rx
